chages user id to string with uuid and prefix
